--- a/learn/index.html
+++ b/learn/index.html
@@ -38,6 +38,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.52.2/min/vs/loader.min.js"></script>
 	<script src="mini-editor.js"></script>
+	<script src="/home/theme.js"></script>
 
 	<script src="docs.js"></script>
 </body>
