--- a/dev/index.html
+++ b/dev/index.html
@@ -42,6 +42,9 @@
 	<script src="/src/q5-webgpu-image.js"></script>
 	<script src="/src/q5-webgpu-text.js"></script>
 
+	<!-- <script src="/dev/assets/ml5.js"></script> -->
+	<script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
+
 	<!-- <script src="/src/q5-dom.js"></script> -->
 	<!-- <script src="/src/q5-2d-soft-filters.js"></script> -->
 	<!-- <script src="/src/q5-noisier.js"></script> -->
