--- a/home/index.html
+++ b/home/index.html
@@ -61,16 +61,12 @@
 <li>free to use under the LGPL (just like p5.js) 🆓</li>
 </ul>
 </md>
-		<div class="minis horiz">
-			<script type="mini" id="p5.js" horiz="" width="350px">
-// p5.js
-function setup() {
-	createCanvas(100, 100);
-	circle(50, 50, 50);
-}
-			</script>
-			<script type="mini" id="q5.js" horiz="" width="350px">
-// q5.js
+		<div class="minis">
+			<md id="md1-1">
+<p>Familiar with p5? You'll be right at home with q5. 🏡</p>
+<p>It's like getting a free computer upgrade! 🖥️</p>
+</md>
+			<script type="mini" id="q5.js" horiz="">
 createCanvas(100, 100);
 circle(50, 50, 50);
 
@@ -272,6 +268,12 @@ circle(50, 50, 50);
 			}
 		})();
 	</script>
+
+
+
+
+
+
 
 
 
