--- a/home/index.html
+++ b/home/index.html
@@ -102,23 +102,25 @@ circle(50, 50, 50);
 		<div class="minis horiz">
 			<md id="md4-0">
 <h2 id="start-coding-💻">Start coding! 💻</h2>
-<p>No installation required! Use an online code editor: <a href="https://openprocessing.org/sketch/2471587" target="_blank">OpenProcessing</a>, <a href="https://aijs.io/editor?user=quinton-ashley&amp;project=logoSpin" target="_blank">Aijs</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>. 🖌️</p>
+<p>No installation required! Use an online code editor: <a href="https://openprocessing.org/sketch/2471587" target="_blank">OpenProcessing</a>, <a href="https://aijs.io/editor?user=quinton-ashley&amp;project=logoSpin" target="_blank">Aijs</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>.</p>
 </md>
 			<md id="md4-1">
 <h2 id="join-us-🤝">Join us 🤝</h2>
-<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>. 🙋</p>
+<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>.</p>
 </md>
-			<md id="md4-2">
+			<div class="minis horiz">
+				<md id="md4-2">
 <h2 id="local-dev-🛠️">Local dev 🛠️</h2>
 <p>You can <a href="https://github.com/q5js/q5.js/wiki/Get-Started" target="_blank">use q5 offline</a> or add this to your HTML file to always load the latest version.</p>
 <pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
 </code></pre>
 </md>
-			<md id="md4-3">
+				<md id="md4-3">
 <h2 id="support-q5-💙">Support q5 💙</h2>
-<p>q5 is open source and anyone can use it for free under the terms of the LGPL (just like p5.js). 🎉</p>
+<p>q5 is open source and anyone can use it for free under the terms of the LGPL (just like p5.js).</p>
 <p>We need your support though! If you enjoy using q5.js, please donate via <a href="https://github.com/sponsors/quinton-ashley" target="_blank">GitHub Sponsors</a> or <a href="https://www.patreon.com/q5play" target="_blank">Patreon</a>.</p>
 </md>
+			</div>
 		</div>
 	</div>
 
@@ -269,6 +271,9 @@ circle(50, 50, 50);
 			}
 		})();
 	</script>
+
+
+
 
 
 
