--- a/home/index.html
+++ b/home/index.html
@@ -52,7 +52,7 @@
 		<md id="md1-0">
 <h2 id="create-art-with-q5-🎨">Create art with q5! 🎨</h2>
 <ul>
-<li>a sequel to <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/" target="_blank">Processing</a> ⭐️</li>
+<li>inspired by <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/" target="_blank">Processing</a> ⭐️</li>
 <li>performance optimized for interactive art 🚀</li>
 <li>lightning fast <a href="https://github.com/q5js/q5.js/wiki/q5-WebGPU-renderer" target="_blank">WebGPU renderer</a> ⚡️</li>
 <li>beginner friendly <a href="/learn" target="_blank">documentation</a> 📚</li>
@@ -92,7 +92,7 @@ circle(50, 50, 50);
 			<a href="https://ml5js.org/">
 				<img id="ml5_brand" src="/assets/brands/ml5_brand.webp" alt="">
 			</a>
-			<a href="https://openprocessing.org/sketch/2471587">
+			<a href="https://openprocessing.org/user/504812">
 				<img id="openprocessing_brand" src="/assets/brands/openprocessing_brand.webp" alt="">
 			</a>
 		</div>
@@ -271,6 +271,9 @@ circle(50, 50, 50);
 			}
 		})();
 	</script>
+
+
+
 
 
 
