--- a/dev/index.html
+++ b/dev/index.html
@@ -43,7 +43,7 @@
 	<script src="/src/q5-webgpu-text.js"></script>
 
 	<!-- <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script> -->
-	<script src="https://cdn.jsdelivr.net/npm/p5.sound@0.1.0/dist/p5.sound.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.sound@0.1.0/dist/p5.sound.js"></script> -->
 
 	<!-- <script src="/src/q5-dom.js"></script> -->
 	<!-- <script src="/src/q5-2d-soft-filters.js"></script> -->
