--- a/dev/index.html
+++ b/dev/index.html
@@ -23,7 +23,7 @@
 	<script src="/src/q5-core.js"></script>
 	<script src="/src/q5-canvas.js"></script>
 	<script src="/src/q5-c2d-canvas.js"></script>
-	<script src="/src/q5-c2d-drawing.js"></script>
+	<script src="/src/q5-c2d-shapes.js"></script>
 	<script src="/src/q5-c2d-image.js"></script>
 	<script src="/src/q5-c2d-text.js"></script>
 	<script src="/src/q5-ai.js"></script>
@@ -38,9 +38,10 @@
 	<script src="/src/q5-vector.js"></script>
 
 	<script src="/src/q5-webgpu-canvas.js"></script>
-	<script src="/src/q5-webgpu-drawing.js"></script>
+	<script src="/src/q5-webgpu-shapes.js"></script>
 	<script src="/src/q5-webgpu-image.js"></script>
 	<script src="/src/q5-webgpu-text.js"></script>
+	<script src="/src/q5-webgpu-shaders.js"></script>
 
 	<!-- <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.sound@0.1.0/dist/p5.sound.js"></script> -->
