--- a/dev/mjs.html
+++ b/dev/mjs.html
@@ -24,7 +24,7 @@
 		import '/src/q5-core.js';
 		import '/src/q5-canvas.js';
 		import '/src/q5-c2d-canvas.js';
-		import '/src/q5-c2d-drawing.js';
+		import '/src/q5-c2d-shapes.js';
 		import '/src/q5-c2d-image.js';
 		import '/src/q5-c2d-text.js';
 		import '/src/q5-ai.js';
@@ -38,8 +38,9 @@
 		import '/src/q5-util.js';
 		import '/src/q5-vector.js';
 		import '/src/q5-webgpu-canvas.js';
-		import '/src/q5-webgpu-drawing.js';
+		import '/src/q5-webgpu-shapes.js';
 		import '/src/q5-webgpu-image.js';
+		import '/src/q5-webgpu-shaders.js';
 		import '/src/q5-webgpu-text.js';
 	</script>
 
