--- a/dev/index.html
+++ b/dev/index.html
@@ -19,6 +19,7 @@
 <body>
 	<main></main>
 	<!-- <script src="https://q5js.org/q5.js"></script> -->
+	<!-- <script src="https://www.unpkg.com/q5@2.21.1/q5.js"></script> -->
 
 	<script src="/src/q5-core.js"></script>
 	<script src="/src/q5-canvas.js"></script>
