--- a/dev/index.html
+++ b/dev/index.html
@@ -18,39 +18,7 @@
 
 <body>
 	<main></main>
-	<!-- <script src="https://q5js.org/q5.js"></script> -->
-	<!-- <script src="https://www.unpkg.com/q5@2.21.1/q5.js"></script> -->
-
-	<script src="/src/q5-core.js"></script>
-	<script src="/src/q5-canvas.js"></script>
-	<script src="/src/q5-c2d-canvas.js"></script>
-	<script src="/src/q5-c2d-shapes.js"></script>
-	<script src="/src/q5-c2d-image.js"></script>
-	<script src="/src/q5-c2d-text.js"></script>
-	<script src="/src/q5-ai.js"></script>
-	<script src="/src/q5-color.js"></script>
-	<script src="/src/q5-dom.js"></script>
-	<script src="/src/q5-display.js"></script>
-	<script src="/src/q5-input.js"></script>
-	<script src="/src/q5-math.js"></script>
-	<script src="/src/q5-record.js"></script>
-	<script src="/src/q5-sound.js"></script>
-	<script src="/src/q5-util.js"></script>
-	<script src="/src/q5-vector.js"></script>
-
-	<script src="/src/q5-webgpu-canvas.js"></script>
-	<script src="/src/q5-webgpu-shapes.js"></script>
-	<script src="/src/q5-webgpu-image.js"></script>
-	<script src="/src/q5-webgpu-text.js"></script>
-	<script src="/src/q5-webgpu-shaders.js"></script>
-
-	<!-- <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script> -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.sound@0.1.0/dist/p5.sound.js"></script> -->
-
-	<!-- <script src="/src/q5-dom.js"></script> -->
-	<!-- <script src="/src/q5-2d-soft-filters.js"></script> -->
-	<!-- <script src="/src/q5-noisier.js"></script> -->
-	<!-- <script src="/src/q5-sensors.js"></script> -->
+	<script src="https://q5js.org/q5.js"></script>
 
 	<script src="sketch.js"></script>
 </body>
