--- a/home/index.html
+++ b/home/index.html
@@ -57,7 +57,7 @@
 <li>lightning fast <a href="https://github.com/q5js/q5.js/wiki/q5-WebGPU-renderer" target="_blank">WebGPU renderer</a> ⚡️</li>
 <li>beginner friendly <a href="/learn" target="_blank">documentation</a> 📚</li>
 <li>compatible with popular p5 addons 🧩</li>
-<li>no dependencies, ~100kb minified 📦</li>
+<li>no dependencies, ~130kb minified 📦</li>
 <li>free to use under the LGPL (just like p5.js) 🆓</li>
 </ul>
 </md>
@@ -117,8 +117,8 @@ circle(50, 50, 50);
 </md>
 				<md id="md4-3">
 <h2 id="support-q5-💙">Support q5 💙</h2>
-<p>q5 is open source and anyone can use it for free under the terms of the LGPL (just like p5.js).</p>
-<p>We need your support though! If you enjoy using q5.js, please donate via <a href="https://github.com/sponsors/quinton-ashley" target="_blank">GitHub Sponsors</a> or <a href="https://www.patreon.com/q5play" target="_blank">Patreon</a>.</p>
+<p><a href="https://github.com/q5js/q5.js" target="_blank">q5 is open source on GitHub</a> and anyone can use it for free under the terms of the LGPL (just like p5.js).</p>
+<p>We need your support though! If you enjoy using q5, please donate via <a href="https://github.com/sponsors/quinton-ashley" target="_blank">GitHub Sponsors</a> or <a href="https://www.patreon.com/q5play" target="_blank">Patreon</a>.</p>
 </md>
 			</div>
 		</div>
@@ -146,7 +146,7 @@ circle(50, 50, 50);
 <h2 id="credits-🌟">Credits 🌟</h2>
 <p>This project aims to continue the legacy of the incredible work done by <a href="https://benfry.com" target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a href="https://processingfoundation.org/" target="_blank">Processing</a>, <a href="http://lauren-mccarthy.com" target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org" target="_blank">p5.js</a>, and all contributors to these projects.</p>
 <p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain Unlicense license. We forked and significantly extended the abandoned codebase.</p>
-<p>q5.js v2 is open source under the LGPLv3, created and actively maintained by the q5 team: <a href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a> and <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.</p>
+<p>q5.js is open source under the LGPLv3, created and actively maintained by <a href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a>. The q5 team includes contributor <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.</p>
 </md>
 	</div>
 	<footer>
