--- a/home/index.html
+++ b/home/index.html
@@ -102,7 +102,7 @@ circle(50, 50, 50);
 		<div class="minis horiz">
 			<md id="md4-0">
 <h2 id="start-coding-💻">Start coding! 💻</h2>
-<p>No installation required! Use an online code editor: <a href="https://openprocessing.org/sketch/2471587" target="_blank">OpenProcessing</a>, <a href="https://aijs.io/editor?user=quinton-ashley&amp;project=logoSpin" target="_blank">Aijs</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>.</p>
+<p>No installation required! Use an online code editor: <a href="https://idx.google.com/new?template=https:%2F%2Fgithub.com%2Fq5js%2Fq5-webgpu-template" target="_blank">Project IDX</a>, <a href="https://openprocessing.org/sketch/2534845" target="_blank">OpenProcessing</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>.</p>
 </md>
 			<md id="md4-1">
 <h2 id="join-us-🤝">Join us 🤝</h2>
