--- a/dev/mjs.html
+++ b/dev/mjs.html
@@ -28,10 +28,10 @@
 		import '/src/q5-c2d-shapes.js';
 		import '/src/q5-c2d-image.js';
 		import '/src/q5-c2d-text.js';
-		import '/src/q5-ai.js';
 		import '/src/q5-color.js';
 		import '/src/q5-display.js';
 		import '/src/q5-dom.js';
+		import '/src/q5-fes.js';
 		import '/src/q5-input.js';
 		import '/src/q5-math.js';
 		import '/src/q5-record.js';
