--- a/dev/p5_v2.html
+++ b/dev/p5_v2.html
@@ -19,10 +19,10 @@
 <body>
 	<main></main>
 
-	<script src="https://cdn.jsdelivr.net/npm/p5@2.0.0-beta.4/lib/p5.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/p5@2.0.0-beta.5/lib/p5.js"></script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script> -->
 
-	<script src="sketch-p5.js"></script>
+	<script type="module" src="sketch-p5.js"></script>
 </body>
 
 </html>
