--- a/dev/test.html
+++ b/dev/test.html
@@ -19,10 +19,10 @@
 <body>
 	<main></main>
 
-	<!-- <script type="module" src="https://q5js.org/q5.js"></script> -->
+	<script type="module" src="q5.js"></script>
 	<!-- <script src="https://www.unpkg.com/q5@2.21.1/q5.js"></script> -->
 
-	<script type="module">
+	<!-- <script type="module">
 		import '/src/q5-core.js';
 		import '/src/q5-canvas.js';
 		import '/src/q5-c2d-canvas.js';
@@ -44,7 +44,7 @@
 		import '/src/q5-webgpu-image.js';
 		import '/src/q5-webgpu-shaders.js';
 		import '/src/q5-webgpu-text.js';
-	</script>
+	</script> -->
 
 	<script type="module" src="sketch.js"></script>
 </body>
